###### TWE 5.2-1 RELEASED ######
2015-03-16 Sasa Bojanic <sasaboy@together.at>
   # Allowed in-place editing of Id, Name and Value attributes in tables

2015-03-11 Sasa Bojanic <sasaboy@together.at>
   # Shark mode: 
      - improved support for extended attributes that allow evaluation of priority/limit/description/name of activity/process
        (update of expressions when Id of used variable is changing, GUI support with multi-line text editor)

###### TWE 5.1-1 RELEASED (2015-02-17) ######
2014-12-23 Sasa Bojanic <sasaboy@together.at>
   # Shark mode: 
      - better support for HTML_VARIABLE extended attribute
      - improvement for sub-tabs selection
      - improvement for typedeclaration/externalreference variable choices
      - documentation updated

2014-12-22 Sasa Bojanic <sasaboy@together.at>
   # Shark mode: 
      - supporting 8 new extended attributes (EVALUATE_PRIORITY_AS_EXPRESSION_PROCESS, EVALUATE_PRIORITY_AS_EXPRESSION_ACTIVITY, EVALUATE_LIMIT_AS_EXPRESSION_PROCESS, EVALUATE_LIMIT_AS_EXPRESSION_ACTIVITY,EVALUATE_DESCRIPTION_AS_EXPRESSION_PROCESS, EVALUATE_DESCRIPTION_AS_EXPRESSION_ACTIVITY, EVALUATE_NAME_AS_EXPRESSION_PROCESS, EVALUATE_NAME_AS_EXPRESSION_ACTIVITY)

2014-12-18 Sasa Bojanic <sasaboy@together.at>
   # Shark mode: 
      - validating Priority and Limits depending on new extended attributes (EVALUATE_PRIORITY_AS_EXPRESSION_PROCESS, EVALUATE_PRIORITY_AS_EXPRESSION_ACTIVITY, EVALUATE_LIMIT_AS_EXPRESSION_PROCESS, EVALUATE_LIMIT_AS_EXPRESSION_ACTIVITY)
   # when re-configuring/changing language, Cancel option is not allowed if XPDL is changed
      
2014-11-12 Sasa Bojanic <sasaboy@together.at>
   # Shark mode: 
      - supported HTML_VARIABLE, HTML5FORM_XSL, IS_WEBDAV_FOR_ACTIVITY_VISIBLE and BACK_ACTIVITY_DEFINITION extended attributes for activity
      - improved GUI and validation

2014-11-10 Sasa Bojanic <sasaboy@together.at>
   # Shark mode: 
      - supported RENDERING_HINT extended attribute for variable