@@ -11429,6 +11429,9 @@ sign.alias=pvktmp:3852567a-45er-567y-w456-23456789sdft</programlisting>Sign
           evaluation of priority/limit/description/name of activity/process
           (update of expressions when Id of used variable is changing, GUI
           support with multi-line text editor)</para>
+
+          <para>- better support for UserGroupToolAgent (added possibility to
+          use getGroupByEMailAddress and getUserByEMailAddress methods)</para>
         </listitem>
       </itemizedlist>
     </section>
